GroupKFold Graph start

--- a/graph_database/Neo4j_Auto_Import_and_Queries_Graph_2_1.ipynb
+++ b/graph_database/Neo4j_Auto_Import_and_Queries_Graph_2_1.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
     "\n",
     "# Define the destination directory\n",
     "# This should be the import directory of your graph database\n",
-    "destination_dir = 'C:/Users/stang/.Neo4jDesktop/relate-data/dbmss/dbms-7fe8052a-76d6-44dd-9440-fd78643a2d57/import'\n",
+    "destination_dir = 'C:/Users/stang/.Neo4jDesktop/relate-data/dbmss/dbms-0898892c-35f2-4a77-9759-d6f57a986ee9/import'\n",
     "\n",
     "# Specify the filenames to move\n",
     "filenames = ['nodes.csv', 'relationships.csv']\n",
@@ -67,158 +67,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Import successful\n",
-      "Neo4j version: 5.12.0\n",
-      "Importing the contents of these files into C:\\Users\\stang\\.Neo4jDesktop\\relate-data\\dbmss\\dbms-7fe8052a-76d6-44dd-9440-fd78643a2d57\\data\\databases\\neo4j:\n",
-      "Nodes:\n",
-      "  C:\\Users\\stang\\.Neo4jDesktop\\relate-data\\dbmss\\dbms-7fe8052a-76d6-44dd-9440-fd78643a2d57\\import\\nodes.csv\n",
-      "\n",
-      "Relationships:\n",
-      "  C:\\Users\\stang\\.Neo4jDesktop\\relate-data\\dbmss\\dbms-7fe8052a-76d6-44dd-9440-fd78643a2d57\\import\\relationships.csv\n",
-      "\n",
-      "\n",
-      "Available resources:\n",
-      "  Total machine memory: 31.86GiB\n",
-      "  Free machine memory: 15.85GiB\n",
-      "  Max heap memory : 910.5MiB\n",
-      "  Max worker threads: 8\n",
-      "  Configured max memory: 13.56GiB\n",
-      "  High parallel IO: true\n",
-      "\n",
-      "\n",
-      "Import starting 2024-03-12 20:13:20.732+0000\n",
-      "  Estimated number of nodes: 3.05 k\n",
-      "  Estimated number of node properties: 3.05 k\n",
-      "  Estimated number of relationships: 766.96 k\n",
-      "  Estimated number of relationship properties: 0.00 \n",
-      "  Estimated disk space usage: 25.03MiB\n",
-      "  Estimated required memory usage: 510.0MiB\n",
-      "\n",
-      "(1/4) Node import 2024-03-12 20:13:20.842+0000\n",
-      "  Estimated number of nodes: 3.05 k\n",
-      "  Estimated disk space usage: 169.5KiB\n",
-      "  Estimated required memory usage: 510.0MiB\n",
-      "-......... .......... .......... .......... ..........   5% ?31ms\n",
-      ".......... .......... .......... .......... ..........  10% ?3ms\n",
-      ".......... .......... .......... .......... ..........  15% ?0ms\n",
-      ".......... .......... .......... .......... ..........  20% ?1ms\n",
-      ".......... .......... .......... .......... ..........  25% ?0ms\n",
-      ".......... .......... .......... .......... ..........  30% ?1ms\n",
-      ".......... .......... .......... .......... ..........  35% ?0ms\n",
-      ".......... .......... .......... .......... ..........  40% ?1ms\n",
-      ".......... .......... .......... .......... ..........  45% ?0ms\n",
-      ".......... .......... .......... .......... ..........  50% ?0ms\n",
-      ".......... .......... .......... .......... ..........  55% ?1ms\n",
-      ".......... .......... .......... .......... ..........  60% ?0ms\n",
-      ".......... .......... .......... .......... ..........  65% ?0ms\n",
-      ".......... .......... .......... .......... ..........  70% ?1ms\n",
-      ".......... .......... .......... .......... ..........  75% ?0ms\n",
-      ".......... .......... .......... .......... ..........  80% ?0ms\n",
-      ".......... .......... .......... .......... ..........  85% ?0ms\n",
-      ".......... .......... .......... .......... ..........  90% ?1ms\n",
-      ".......... .......... .......... .......... ..........  95% ?0ms\n",
-      ".......... .......... .......... .......... .......... 100% ?0ms\n",
-      "\n",
-      "Node import COMPLETED in 122ms\n",
-      "\n",
-      "(2/4) Relationship import 2024-03-12 20:13:20.964+0000\n",
-      "  Estimated number of relationships: 766.96 k\n",
-      "  Estimated disk space usage: 24.87MiB\n",
-      "  Estimated required memory usage: 517.6MiB\n",
-      ".......... .......... .......... .......... ..........   5% ?453ms\n",
-      ".......... .......... .......... .......... ..........  10% ?0ms\n",
-      ".......... .......... .......... .......... ..........  15% ?1ms\n",
-      ".......... .......... .......... .......... ..........  20% ?0ms\n",
-      ".......... .......... .......... .......... ..........  25% ?0ms\n",
-      ".......... .......... .......... .......... ..........  30% ?0ms\n",
-      ".......... .......... .......... .......... ..........  35% ?0ms\n",
-      ".......... .......... .......... .......... ..........  40% ?1ms\n",
-      ".......... .......... .......... .......... ..........  45% ?0ms\n",
-      ".......... .......... .......... .......... ..........  50% ?0ms\n",
-      ".......... .......... .......... .......... ..........  55% ?0ms\n",
-      ".......... .......... .......... .......... ..........  60% ?1ms\n",
-      ".......... .......... .......... .......... ..........  65% ?0ms\n",
-      ".......... .......... .......... .......... ..........  70% ?126ms\n",
-      ".......... .......... .......... .......... ..........  75% ?1ms\n",
-      ".......... .......... .......... .......... ..........  80% ?0ms\n",
-      ".......... .......... .......... .......... ..........  85% ?0ms\n",
-      ".......... .......... .......... .......... ..........  90% ?0ms\n",
-      ".......... .......... .......... .......... ..........  95% ?0ms\n",
-      ".......... .......... .......... .......... .......... 100% ?0ms\n",
-      "\n",
-      "Relationship import COMPLETED in 583ms\n",
-      "\n",
-      "(3/4) Relationship linking 2024-03-12 20:13:21.547+0000\n",
-      "  Estimated required memory usage: 510.0MiB\n",
-      "-......... .......... .......... .......... ..........   5% ?208ms\n",
-      ".......... .......... .......... .......... ..........  10% ?1ms\n",
-      ".......... .......... .......... .......... ..........  15% ?1ms\n",
-      ".......... .......... .......... .......... ..........  20% ?1ms\n",
-      ".......... .......... .......... .......... ..........  25% ?1ms\n",
-      ".......... .......... .......... .......... ..........  30% ?0ms\n",
-      ".......... .......... .......... .......... ..........  35% ?1ms\n",
-      ".......... .......... .......... .......... ..........  40% ?1ms\n",
-      ".......... .......... .......... .......... ..........  45% ?1ms\n",
-      ".......... .......... .......... .......... ..........  50% ?1ms\n",
-      ".......... .......... .......... .......... ..........  55% ?0ms\n",
-      ".......... .......... .......... .......... ..........  60% ?1ms\n",
-      ".......... .......... .......... .......... ..........  65% ?0ms\n",
-      ".......... .......... .......... .......... ..........  70% ?1ms\n",
-      ".......... .......... .......... .......... ..........  75% ?0ms\n",
-      ".......... .......... .......... .......... ..........  80% ?0ms\n",
-      ".......... .......... .......... .......... ..........  85% ?1ms\n",
-      ".......... .......... .......... .......... ..........  90% ?0ms\n",
-      ".......... .......... .......... .......... ..........  95% ?1ms\n",
-      ".......... .......... .......... .......... .......... 100% ?0ms\n",
-      "\n",
-      "Relationship linking COMPLETED in 577ms\n",
-      "\n",
-      "(4/4) Post processing 2024-03-12 20:13:22.124+0000\n",
-      "  Estimated required memory usage: 510.0MiB\n",
-      "-......... .......... .......... .......... ..........   5% ?180ms\n",
-      ".......... .......... .......... .......... ..........  10% ?1ms\n",
-      ".......... .......... .......... .......... ..........  15% ?0ms\n",
-      ".......... .......... .......... .......... ..........  20% ?0ms\n",
-      ".......... .......... .......... .......... ..........  25% ?0ms\n",
-      ".......... .......... .......... .......... ..........  30% ?0ms\n",
-      ".......... .......... .......... .......... ..........  35% ?0ms\n",
-      ".......... .......... .......... .......... ..........  40% ?0ms\n",
-      ".......... .......... .......... .......... ..........  45% ?0ms\n",
-      ".......... .......... .......... .......... ..........  50% ?0ms\n",
-      ".......... .......... .......... .......... ..........  55% ?1ms\n",
-      ".......... .......... .......... .......... ..........  60% ?0ms\n",
-      ".......... .......... .......... .......... ..........  65% ?0ms\n",
-      ".......... .......... .......... .......... ..........  70% ?0ms\n",
-      ".......... .......... .......... .......... ..........  75% ?0ms\n",
-      ".......... .......... .......... .......... ..........  80% ?0ms\n",
-      ".......... .......... .......... .......... ..........  85% ?1ms\n",
-      ".......... .......... .......... .......... ..........  90% ?0ms\n",
-      ".......... .......... .......... .......... ..........  95% ?0ms\n",
-      ".......... .......... .......... .......... .......... 100% ?0ms\n",
-      "\n",
-      "Post processing COMPLETED in 672ms\n",
-      "\n",
-      "\n",
-      "IMPORT DONE in 2s 205ms. \n",
-      "Imported:\n",
-      "  3045 nodes\n",
-      "  749945 relationships\n",
-      "  3045 properties\n",
-      "Peak memory usage: 547.2MiB\n",
+      "Error during import:\n",
+      "WARNING! You are using an unsupported Java runtime.\n",
+      "* Please use Oracle(R) Java(TM) 17, OpenJDK(TM) 17 to run Neo4j.\n",
+      "* Please see https://neo4j.com/docs/ for Neo4j installation instructions.\n",
+      "\u001b[31m\u001b[1morg.neo4j.internal.batchimport.input.HeaderException: Group 'null' not found. Available groups are: []\u001b[21m\u001b[39m\u001b[0m\n",
+      "\u001b[3m\tat org.neo4j.internal.batchimport.input.Groups.get(Groups.java:77)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat org.neo4j.internal.batchimport.input.csv.DataFactories$DefaultRelationshipFileHeaderParser.create(DataFactories.java:445)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat org.neo4j.internal.batchimport.input.csv.DataFactories.parseHeaderEntries(DataFactories.java:196)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat org.neo4j.internal.batchimport.input.csv.DataFactories$AbstractDefaultFileHeaderParser.create(DataFactories.java:221)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat org.neo4j.internal.batchimport.input.csv.CsvInput.verifyHeaders(CsvInput.java:208)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat org.neo4j.internal.batchimport.input.csv.CsvInput.<init>(CsvInput.java:145)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat org.neo4j.internal.batchimport.input.csv.CsvInput.<init>(CsvInput.java:108)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat org.neo4j.importer.CsvImporter.doImport(CsvImporter.java:175)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat org.neo4j.importer.ImportCommand$Base.doExecute(ImportCommand.java:431)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat org.neo4j.importer.ImportCommand$Full.execute(ImportCommand.java:590)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat org.neo4j.cli.AbstractCommand.call(AbstractCommand.java:92)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat org.neo4j.cli.AbstractCommand.call(AbstractCommand.java:37)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat picocli.CommandLine.executeUserObject(CommandLine.java:2041)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat picocli.CommandLine.access$1500(CommandLine.java:148)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat picocli.CommandLine$RunLast.executeUserObjectOfLastSubcommandWithSameParent(CommandLine.java:2461)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat picocli.CommandLine$RunLast.handle(CommandLine.java:2453)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat picocli.CommandLine$RunLast.handle(CommandLine.java:2415)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat picocli.CommandLine$AbstractParseResultHandler.execute(CommandLine.java:2273)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat picocli.CommandLine$RunLast.execute(CommandLine.java:2417)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat picocli.CommandLine.execute(CommandLine.java:2170)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat org.neo4j.cli.AdminTool.execute(AdminTool.java:94)\u001b[23m\u001b[0m\n",
+      "\u001b[3m\tat org.neo4j.cli.AdminTool.main(AdminTool.java:82)\u001b[23m\u001b[0m\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
    "source": [
     "# Define the working directory\n",
-    "working_dir = 'C:/Users/stang/.Neo4jDesktop/relate-data/dbmss/dbms-7fe8052a-76d6-44dd-9440-fd78643a2d57/bin'\n",
+    "working_dir = 'C:/Users/stang/.Neo4jDesktop/relate-data/dbmss/dbms-0898892c-35f2-4a77-9759-d6f57a986ee9/bin'\n",
     "\n",
     "# Construct the command\n",
     "#command = [\n",
