--- a/graph_database/graph_2_1.ipynb
+++ b/graph_database/graph_2_1.ipynb
@@ -690,7 +690,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes_df.rename(columns={'Absorbance':'Absorbance:float[]'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SpecID</th>\n",
+       "      <th>Absorbance:float[]</th>\n",
+       "      <th>:LABEL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>201210-1-00</td>\n",
+       "      <td>[0.5846368667440481, 0.5766214692855114, 0.568...</td>\n",
+       "      <td>Spectra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>201210-1-01</td>\n",
+       "      <td>[0.8522228279874604, 0.8301496801488988, 0.808...</td>\n",
+       "      <td>Spectra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>201210-1-02</td>\n",
+       "      <td>[0.23917417255148796, 0.23086342019424894, 0.2...</td>\n",
+       "      <td>Spectra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>201210-1-03</td>\n",
+       "      <td>[0.26347646565747873, 0.3205993679855202, 0.37...</td>\n",
+       "      <td>Spectra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>201210-1-04</td>\n",
+       "      <td>[0.38813505202040893, 0.38211587024411076, 0.3...</td>\n",
+       "      <td>Spectra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3040</th>\n",
+       "      <td>210526-3-45</td>\n",
+       "      <td>[0.008470611810050628, 0.005020352683992512, 0...</td>\n",
+       "      <td>Spectra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3041</th>\n",
+       "      <td>210526-3-46</td>\n",
+       "      <td>[0.05497018994538006, 0.04519684799004031, 0.0...</td>\n",
+       "      <td>Spectra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3042</th>\n",
+       "      <td>210526-3-47</td>\n",
+       "      <td>[0.07315402717028612, 0.06272562101695468, 0.0...</td>\n",
+       "      <td>Spectra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3043</th>\n",
+       "      <td>210526-3-48</td>\n",
+       "      <td>[0.02686025161046556, 0.0197463518167611, 0.01...</td>\n",
+       "      <td>Spectra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3044</th>\n",
+       "      <td>210526-3-49</td>\n",
+       "      <td>[0.11471676759493617, 0.10059970772544115, 0.0...</td>\n",
+       "      <td>Spectra</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3045 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           SpecID                                 Absorbance:float[]   :LABEL\n",
+       "0     201210-1-00  [0.5846368667440481, 0.5766214692855114, 0.568...  Spectra\n",
+       "1     201210-1-01  [0.8522228279874604, 0.8301496801488988, 0.808...  Spectra\n",
+       "2     201210-1-02  [0.23917417255148796, 0.23086342019424894, 0.2...  Spectra\n",
+       "3     201210-1-03  [0.26347646565747873, 0.3205993679855202, 0.37...  Spectra\n",
+       "4     201210-1-04  [0.38813505202040893, 0.38211587024411076, 0.3...  Spectra\n",
+       "...           ...                                                ...      ...\n",
+       "3040  210526-3-45  [0.008470611810050628, 0.005020352683992512, 0...  Spectra\n",
+       "3041  210526-3-46  [0.05497018994538006, 0.04519684799004031, 0.0...  Spectra\n",
+       "3042  210526-3-47  [0.07315402717028612, 0.06272562101695468, 0.0...  Spectra\n",
+       "3043  210526-3-48  [0.02686025161046556, 0.0197463518167611, 0.01...  Spectra\n",
+       "3044  210526-3-49  [0.11471676759493617, 0.10059970772544115, 0.0...  Spectra\n",
+       "\n",
+       "[3045 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 260,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nodes_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
