Changed Despiking ma to 20

--- a/GroupKFold_feature_engineering/Surface_Median_baseline+noise_removal_parameter_tuning.ipynb
+++ b/GroupKFold_feature_engineering/Surface_Median_baseline+noise_removal_parameter_tuning.ipynb
@@ -914,109 +914,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">**Count the Surface IDs and the number of associated samples**"
+    ">**The Count of Surface IDs and the number of associated samples**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SurID\n",
-       "201210-1    49\n",
-       "201210-2    50\n",
-       "210114-1    50\n",
-       "210114-2    50\n",
-       "210120-1    50\n",
-       "            ..\n",
-       "210519-3    50\n",
-       "210524-1    15\n",
-       "210526-1    50\n",
-       "210526-2    15\n",
-       "210526-3    50\n",
-       "Name: SpecID, Length: 63, dtype: int64"
+       "63"
       ]
      },
-     "execution_count": 146,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "surface_spec_counts = df.groupby('SurID')['SpecID'].nunique()\n",
-    "surface_spec_counts"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **Show the number of spectra with each status**"
+    "len(wavelength_df.groupby(['SurID']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Status\n",
-       "Hyperglycemia     915\n",
-       "Hypoglycemia     1065\n",
-       "Normal           1065\n",
-       "Name: SpecID, dtype: int64"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "status_spectra_counts = df.groupby('Status')['SpecID'].nunique()\n",
-    "status_spectra_counts"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **Show the number of surfaces with each status**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Status\n",
-       "Hyperglycemia    19\n",
-       "Hypoglycemia     22\n",
-       "Normal           22\n",
-       "Name: SurID, dtype: int64"
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "status_surface_counts = df.groupby('Status')['SurID'].nunique()\n",
-    "status_surface_counts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1050,31 +972,31 @@
        "      <th>0</th>\n",
        "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>1</td>\n",
+       "      <td>49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>201210-2</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>1</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>210114-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>1</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>210114-2</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>1</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>210120-1</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>1</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1086,31 +1008,31 @@
        "      <th>58</th>\n",
        "      <td>210519-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>1</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>59</th>\n",
        "      <td>210524-1</td>\n",
        "      <td>Hypoglycemia</td>\n",
-       "      <td>1</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>60</th>\n",
        "      <td>210526-1</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>1</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61</th>\n",
        "      <td>210526-2</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>1</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>62</th>\n",
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>1</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1119,30 +1041,178 @@
       ],
       "text/plain": [
        "       SurID         Status  Count of Spectra per Surface\n",
-       "0   201210-1         Normal                             1\n",
-       "1   201210-2         Normal                             1\n",
-       "2   210114-1         Normal                             1\n",
-       "3   210114-2         Normal                             1\n",
-       "4   210120-1  Hyperglycemia                             1\n",
+       "0   201210-1         Normal                            49\n",
+       "1   201210-2         Normal                            50\n",
+       "2   210114-1         Normal                            50\n",
+       "3   210114-2         Normal                            50\n",
+       "4   210120-1  Hyperglycemia                            50\n",
        "..       ...            ...                           ...\n",
-       "58  210519-3  Hyperglycemia                             1\n",
-       "59  210524-1   Hypoglycemia                             1\n",
-       "60  210526-1  Hyperglycemia                             1\n",
-       "61  210526-2  Hyperglycemia                             1\n",
-       "62  210526-3  Hyperglycemia                             1\n",
+       "58  210519-3  Hyperglycemia                            50\n",
+       "59  210524-1   Hypoglycemia                            15\n",
+       "60  210526-1  Hyperglycemia                            50\n",
+       "61  210526-2  Hyperglycemia                            15\n",
+       "62  210526-3  Hyperglycemia                            50\n",
        "\n",
        "[63 rows x 3 columns]"
       ]
      },
-     "execution_count": 149,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# Count unique combinations\n",
-    "unique_combos_count = wavelength_df.groupby(['SurID', 'Status']).size().reset_index(name='Count of Spectra per Surface')\n",
-    "unique_combos_count"
+    "wavelength_df.groupby(['SurID', 'Status']).size().reset_index(name='Count of Spectra per Surface')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It looks like each Surface is associated with 1 Status"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">**The Count of Spectra with each Status**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Spectra Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hypoglycemia</td>\n",
+       "      <td>1065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Normal</td>\n",
+       "      <td>1065</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Status  Spectra Count\n",
+       "0  Hyperglycemia            915\n",
+       "1   Hypoglycemia           1065\n",
+       "2         Normal           1065"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df.groupby('Status')['SpecID'].nunique().reset_index(name='Spectra Count')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">**The Count of Surfaces with each Status**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Surface Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hypoglycemia</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Normal</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Status  Surface Count\n",
+       "0  Hyperglycemia             19\n",
+       "1   Hypoglycemia             22\n",
+       "2         Normal             22"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df.groupby('Status')['SurID'].nunique().reset_index(name='Surface Count')"
    ]
   },
   {
