Added Vector scaling

--- a/GroupKFold_feature_engineering/GroupKFold_Parrallel_Baseline_Correction_and_Smoothing_Cross_Validation.ipynb
+++ b/GroupKFold_feature_engineering/GroupKFold_Parrallel_Baseline_Correction_and_Smoothing_Cross_Validation.ipynb
@@ -562,8 +562,27 @@
    "source": [
     "def normalise(absorbances):\n",
     "    max_value = np.max(absorbances)\n",
-    "    normalized_absorbances = absorbances / max_value\n",
-    "    return normalized_absorbances"
+    "    normalised_absorbances = absorbances / max_value\n",
+    "    return normalised_absorbances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try with vector scaling instead."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalise(absorbances):\n",
+    "    l2_norm = np.sqrt(np.sum(absorbances**2))  # Calculate the euclidean norm\n",
+    "    normalised_absorbances = absorbances / l2_norm\n",
+    "    return normalised_absorbances"
    ]
   },
   {
