Added SVN Scaling

--- a/feature_engineering/quick_spectra_cleaning.ipynb
+++ b/feature_engineering/quick_spectra_cleaning.ipynb
@@ -23,8 +23,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.signal import savgol_filter\n",
-    "from scipy import sparse\n",
-    "from scipy.sparse.linalg import spsolve\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import StratifiedKFold, KFold\n",
@@ -287,6 +285,25 @@
     "    l2_norm = np.sqrt(np.sum(absorbances**2))  # Calculate the euclidean norm\n",
     "    normalized_absorbances = absorbances / l2_norm\n",
     "    return normalized_absorbances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">Scale the absorbances to the mean and std of absorbances."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def svn_normalise(absorbances):\n",
+    "    mean = absorbances.mean()\n",
+    "    std = absorbances.std()\n",
+    "    return (absorbances - mean) / std"
    ]
   },
   {
